--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -26,7 +26,7 @@
                 </div>
                 <div style="margin-top: -195px; z-index: 5;">
                   <div id="homemenu" style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; z-index: 5; position: absolute; margin-top: 15px;" class="circle-link icon menuicon"></div>
-                  <div id="cellmenu" style="background: url('https://ihorkulinich.github.io/js-v1/img/cell.png') no-repeat; background-size: contain; z-index: 5; position: absolute; margin-top: 47;" class="circle-link icon menuicon"></div>
+                  <!--search--><div id="cellmenu" style="background: url('https://ihorkulinich.github.io/js-v1/img/cell.png') no-repeat; background-size: contain; z-index: 5; position: absolute; margin-top: 47;" class="circle-link icon menuicon"></div>
                   <div id="tablemenu" style="background: url('https://ihorkulinich.github.io/js-v1/img/table.png') no-repeat; background-size: contain; z-index: 5; position: absolute; margin-top: 83;" class="circle-link icon menuicon"></div>
                   <div id="dashmenu" style="background: url('https://ihorkulinich.github.io/js-v1/img/dashboard.png') no-repeat; background-size: contain; z-index: 5; position: absolute; margin-top: 120;" class="circle-link icon menuicon"></div>
                   <div id="teammenu" style="background: url('https://ihorkulinich.github.io/js-v1/img/team.png') no-repeat; background-size: contain; z-index: 5; position: absolute; margin-top: 155;" class="circle-link icon menuicon"></div>
@@ -45,10 +45,7 @@
                         transition: opacity 1s ease .2s;
                       }
                     </style>
-
-                    <path id="hometext">
-                      <circle cx="0" cy="34" r="22" fill="white" />
-                    </path>
+                  
 
                     <clipPath id="homeshadow">
                       <circle cx="0" cy="34" r="22" fill="white" />
