--- a/views/popup.html
+++ b/views/popup.html
@@ -45,14 +45,14 @@
 
         <a href="#" class="CTA white-matte choosepop">
             <div style="display: grid; grid-template-columns: 30px calc( 100% - 30px ); margin-left: 15%;">
-                <div><img src="../img/fields.png" width="30px" height="30px"></div>
+                <div><img src="../img/stat.png" width="30px" height="30px"></div>
                 <div><h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; ">Statuses</h2></div>
             </div>
         </a>
 
         <a href="#" class="CTA white-matte choosepop">
             <div style="display: grid; grid-template-columns: 30px calc( 100% - 30px ); margin-left: 23%;">
-                <div><img src="../img/fields.png" width="30px" height="30px"></div>
+                <div><img src="../img/task.png" width="30px" height="30px"></div>
                 <div><h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; ">Tasks</h2></div>
             </div>
         </a>
@@ -66,21 +66,21 @@
         
         <a href="#" class="CTA white-matte choosepop">
             <div style="display: grid; grid-template-columns: 30px calc( 100% - 30px ); margin-left: 15%;">
-                <div><img src="../img/mails.png" width="30px" height="30px"></div>
+                <div><img src="../img/comm.png" width="30px" height="30px"></div>
                 <div><h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; ">Comments</h2></div>
             </div>
         </a>
 
         <a href="#" class="CTA white-matte choosepop">
             <div style="display: grid; grid-template-columns: 30px calc( 100% - 30px ); margin-left: 15%;">
-                <div><img src="../img/mails.png" width="30px" height="30px"></div>
+                <div><img src="../img/check.png" width="30px" height="30px"></div>
                 <div><h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; ">Cheklist</h2></div>
             </div>
         </a>
 
         <a href="#" class="CTA white-matte choosepop">
             <div style="display: grid; grid-template-columns: 30px calc( 100% - 30px ); margin-left: 23%;">
-                <div><img src="../img/mails.png" width="30px" height="30px"></div>
+                <div><img src="../img/times.png" width="30px" height="30px"></div>
                 <div><h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; ">Times</h2></div>
             </div>
         </a>
