--- a/views/fieldlist.popup.html
+++ b/views/fieldlist.popup.html
@@ -21,7 +21,7 @@
     <div id="back">
     </div>
 
-    <div style="width: calc( 100% - 30px ); height: 30px; display: grid; grid-template-columns: 70px 40px calc( 100% - 100px ); grid-column-gap: 10px; padding: 5px;">
+    <div style="width: calc( 100% - 30px ); height: 30px; display: grid; grid-template-columns: 50px 30px calc( 100% - 80px ); grid-column-gap: 10px; padding: 5px;">
         <div>
             <a href="fields.popup.html" class="left-button white-matte">
                 <span style="padding-left: 12px;">
@@ -43,16 +43,18 @@
 
     <hr style="border-top: 1px solid black;">
 
-    <div style="padding: 5px; width: calc( 100% - 30px ); display: grid; grid-template-columns: 100%; grid-auto-rows: 30px; grid-row-gap: 10px; max-height: ( 100% - 50px );" id="fieldsgroup">
+    <div style="padding: 5px; width: calc( 100% - 30px ); display: none; grid-template-columns: 100%; grid-auto-rows: 30px; grid-row-gap: 10px; max-height: ( 100% - 50px );" id="fieldsgroup">
             
-        <div class="blured radied" style="display: grid; grid-template-columns: 20px calc( 100% - 90px) 20px 20px; grid-auto-rows: 100%; padding: 5px; grid-column-gap: 10px;" id="fielddiv">
-            <div style="background: url('../img/dots.png') no-repeat; background-size: contain;"></div>
-            <div id="fieldtext">
+        <a href="addfield.popup.html" id="fielddiv">
+            <div class="blured radied" style="display: grid; grid-template-columns: 20px calc( 100% - 90px) 20px 20px; grid-auto-rows: 100%; padding: 5px; grid-column-gap: 10px;">
+                <div style="background: url('../img/dots.png') no-repeat; background-size: contain;"></div>
+                <div id="fieldtext">
 
+                </div>
+                <div style="background: url('../img/txt.png') no-repeat; background-size: contain;" id="fieldtype"></div>
+                <div style="background: url('../img/edit.png') no-repeat; background-size: contain;"></div>
             </div>
-            <div style="background: url('../img/txt.png') no-repeat; background-size: contain;" id="fieldtype"></div>
-            <div style="background: url('../img/edit.png') no-repeat; background-size: contain;"></div>
-        </div>
+        </a>
 
     </div>
 
