--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -253,12 +253,14 @@
         <div style="display: grid; grid-template-columns: calc( ( 100% - 10px ) / 3) calc( ( 100% - 10px ) / 3) calc( ( 100% - 10px ) / 3); grid-auto-rows: 100%; grid-column-gap: 5px; width: 100%; height: 100%;">
           <div class="blured radied">
             <div class="card block2" style="padding: 15px; width: calc( 100% - 45px ); height: calc( 100% - 50px ); margin-left: 5px; margin-top: 5px;">
-              <div>
+              
+              <div style="display: none;">
                 <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/pers.png') no-repeat; background-size: contain; display: inline-block;"></div>
                 <h2 style="display: inline;">Cabinet</h2><br>
-                
+                <p>Some text ala cabinet</p>
               </div>
-              <p>Some text ala cabinet</p>
+              
+              
               <a href="#" id="addfield" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
                 <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add field</p>
                 <img src="../img/plus2.png" height="20px" width="20px" style="display: inline-block; margin-top: 3px;">
