--- a/views/fieldlist.popup.html
+++ b/views/fieldlist.popup.html
@@ -45,15 +45,17 @@
 
     <div style="padding: 5px; width: calc( 100% - 30px ); display: none; grid-template-columns: 100%; grid-auto-rows: 30px; grid-row-gap: 10px; max-height: ( 100% - 50px );" id="fieldsgroup">
             
-        <a href="addfield.popup.html" id="fielddiv">
+        <a href="addfield.popup.html" id="fielddiv" style="display: none;">
+
             <div class="blured radied" style="display: grid; grid-template-columns: 20px calc( 100% - 90px) 20px 20px; grid-auto-rows: 100%; padding: 5px; grid-column-gap: 10px;">
                 <div style="background: url('../img/dots.png') no-repeat; background-size: contain;"></div>
-                <div id="fieldtext">
+                <div>
 
                 </div>
-                <div style="background: url('../img/txt.png') no-repeat; background-size: contain;" id="fieldtype"></div>
+                <div style="background: url('../img/txt.png') no-repeat; background-size: contain;"></div>
                 <div style="background: url('../img/edit.png') no-repeat; background-size: contain;"></div>
             </div>
+
         </a>
 
     </div>
