--- a/views/popup.html
+++ b/views/popup.html
@@ -34,7 +34,7 @@
         таймер-трекер
         доки
     -->
-    <div style="padding: 10px; width: 100%;">
+    <div style="padding: 10px; width: calc( 100% - 30px );">
 
         <a href="fields.popup.html" class="CTA white-matte choosepop">
             <div style="display: grid; grid-template-columns: 30px calc( 100% - 30px ); margin-left: 20%;">
