--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -17,7 +17,7 @@
   <body>
     <div id="back">
     </div>
-    <div  style="padding: 10px; width: calc( 100% - 60px );">
+    <div  style="padding: 10px; width: calc( 100% - 30px );">
     
         <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 50px 30px calc( 100% - 80px ); grid-column-gap: 10px; padding: 5px;">
             <div>
@@ -39,7 +39,7 @@
 
         <hr style="border-top: 1px solid black;">
 
-        <div class="card block2" style="width: calc( 100% - 30px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: -10px;">
+        <div class="card block2" style="width: 100%; height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: -10px;">
             <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div class="card block2" style="width: calc( 100% - 30px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px;  margin-top: 10px;">
+        <div class="card block2" style="width: 100%; height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px;  margin-top: 10px;">
             <div style="background: url('../img/group.jpg') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <div class="card block2" style="width: calc( 100% - 20px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: 10px;">
+        <div class="card block2" style="width: 100%; height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: 10px;">
             <div style="background: url('../img/section.png') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: 10px;">
+        <div class="card block2" style="width: 100%; height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: 10px;">
             <div style="background: url('../img/autom.png') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
