--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -19,7 +19,7 @@
     </div>
     <div  style="padding: 10px; width: calc( 100% - 30px );">
     
-        <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 50px 30px calc( 100% - 80px ); grid-column-gap: 10px; padding: 5px;">
+        <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 50px calc( 100% - 50px ); grid-column-gap: 10px; padding: 5px;" class="metal2 hui shadowed">
             <div>
                 <a href="popup.html" class="left-button white-matte">
                     <span style="padding-left: 12px;">
@@ -27,13 +27,8 @@
                     </span>
                 </a>
             </div>
-            <div>
-                <p style="padding-top: 7px;">
-                    Back
-                </p>
-            </div>
             <div style="text-align: center;">
-                <h2>Fields menu</h2>
+                <h2 style="letter-spacing: 4px;">Fields menu</h2>
             </div>
         </div>
 
