--- a/views/fieldlist.popup.html
+++ b/views/fieldlist.popup.html
@@ -21,7 +21,7 @@
     <div id="back">
     </div>
 
-    <div style="width: calc( 100% - 60px ); height: 30px; display: grid; grid-template-columns: 50px 30px calc( 100% - 80px ); grid-column-gap: 10px; padding: 5px;">
+    <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 50px calc( 100% - 50px ); grid-column-gap: 10px; padding: 5px;" class="metal2 hui shadowed">
         <div>
             <a href="fields.popup.html" class="left-button white-matte">
                 <span style="padding-left: 12px;">
@@ -29,18 +29,11 @@
                 </span>
             </a>
         </div>
-        <div>
-            <p style="padding-top: 7px;">
-                Back
-            </p>
-        </div>
         <div style="text-align: center;">
             <h2>Fields list</h2>
         </div>
     </div>
     
-    
-
     <hr style="border-top: 1px solid black;">
 
     <div style="padding: 5px; width: calc( 100% - 60px ); display: none; grid-template-columns: 100%; grid-auto-rows: 30px; grid-row-gap: 10px; max-height: ( 100% - 50px );" id="fieldsgroup">
