--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -267,7 +267,19 @@
               </a>
 
               <form id="addfieldset" style="margin-top: -5px;">
-                
+                <fieldset id="textsettingsb" style="display: none;">
+                  <label for="namesetb">Name:</label>
+                  <input type="text" value="" id="namesetb" style="width: 100%;">
+     
+                  <label for="typelistsetb">Type:</label>
+                  <select id="typelistsetb" class="minimal" style="width: 100%;">
+                      <option></option>
+                      <option value="Text">Text</option>
+                      <option value="List">List</option>
+                  </select>
+              </fieldset>
+
+
               </form>
             </div>
             
