--- a/views/addfield.popup.html
+++ b/views/addfield.popup.html
@@ -46,7 +46,7 @@
              <label for="nameset">Name:</label>
              <input type="text" value="" id="nameset" style="width: 100%;">
 
-             <label for="typeset">Type:</label>
+             <label for="typelistset">Type:</label>
              <select id="typelistset" class="minimal" style="width: 100%;">
                  <option></option>
                  <option value="Text">Text</option>
