--- a/views/addfield.popup.html
+++ b/views/addfield.popup.html
@@ -20,19 +20,15 @@
   <body>
     <div id="back">
     </div>
+    
 
-    <div style="width: calc( 100% - 60px ); height: 30px; display: grid; grid-template-columns: 50px 30px calc( 100% - 80px ); grid-column-gap: 10px; padding: 5px;">
+    <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 50px calc( 100% - 50px ); grid-column-gap: 10px; padding: 5px;" class="metal2 hui shadowed">
         <div>
             <a href="fieldlist.popup.html" class="left-button white-matte">
                 <span style="padding-left: 12px;">
                 &#8592;
                 </span>
             </a>
-        </div>
-        <div>
-            <p style="padding-top: 7px;">
-                Back
-            </p>
         </div>
         <div style="text-align: center;">
             <h2>Field edit</h2>
