--- a/views/addfield.popup.html
+++ b/views/addfield.popup.html
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div style="text-align: center;">
-            <h2>Field edit</h2>
+            <h2 style="letter-spacing: 5px;">Field edit</h2>
         </div>
     </div>
 
