--- a/views/fieldlist.popup.html
+++ b/views/fieldlist.popup.html
@@ -30,7 +30,7 @@
             </a>
         </div>
         <div style="text-align: center;">
-            <h2>Fields list</h2>
+            <h2 style="letter-spacing: 5px;">Fields list</h2>
         </div>
     </div>
     
