--- a/views/addfield.popup.html
+++ b/views/addfield.popup.html
@@ -69,7 +69,7 @@
           </fieldset>
 
           <fieldset class="dopgrid" style="width: calc( 100% - 60px );">
-            <label for="nameset">Option value:</label>
+            <label for="optionset">Option value:</label>
             <input type="text" value="" id="optionset" style="width: 100%;">
           </fieldset>
 
