--- a/views/addfield.popup.html
+++ b/views/addfield.popup.html
@@ -43,7 +43,7 @@
              <input type="text" value="" id="nameset" style="width: 100%;">
 
              <label for="typelistset">Type:</label>
-             <select id="typelistset" class="minimal" style="width: 100%;">
+             <select id="typelistset" class="minimal" style="width: 100%;" disabled>
                  <option></option>
                  <option value="Text">Text</option>
                  <option value="List">List</option>
