--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -272,7 +272,7 @@
                   <input type="text" value="" id="namesetb" style="width: 100%;">
      
                   <label for="typelistsetb">Type:</label>
-                  <select id="typelistsetb" class="minimal" style="width: 100%;">
+                  <select id="typelistsetb" class="minimal" style="width: 100%;" disabled>
                       <option></option>
                       <option value="Text">Text</option>
                       <option value="List">List</option>
