--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -279,7 +279,7 @@
                   </select>
               </fieldset>
 
-              <div class="horizonted" style="padding: 0; display: none;">
+              <div class="horizonted" style="padding: 0; display: none;" id="optsbdiv">
                 <fieldset class="manylegends setter" id="listsettingsb">
                    <legend>
                      Options list
