--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -266,12 +266,12 @@
                 <img src="../img/plus2.png" height="20px" width="20px" style="display: inline-block; margin-top: 3px;">
               </a>
 
-              <form id="addfieldset" style="margin-top: -5px;">
+              <form id="addfieldset" style="margin-top: -15px;">
                 <fieldset id="textsettingsb" style="display: none;">
                   <label for="namesetb">Name:</label>
                   <input type="text" value="" id="namesetb" style="width: 100%;">
      
-                  <label for="typelistsetb">Type:</label>
+                  <label for="typelistsetb" style="margin-top: -5px;">Type:</label>
                   <select id="typelistsetb" class="minimal" style="width: 100%;" disabled>
                       <option></option>
                       <option value="Text">Text</option>
