--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -326,7 +326,7 @@
                    });
                  </script>
                 
-                <div style="width: calc( 100% - 60px ); padding: 5px; margin-top: 200px; position: sticky; height: 30px; display: none; grid-template-columns: 50% 50%; grid-column-gap: 10px; grid-auto-rows: 30px;" id="buttonsinpb">
+                <div style="width: calc( 100% - 60px ); padding: 5px; margin-top: 200px; height: 30px; display: none; grid-template-columns: 50% 50%; grid-column-gap: 10px; grid-auto-rows: 30px;" id="buttonsinpb">
                    <div>
                        <button id="settingsetb" class="CTA emerald" style="padding: 5px 10px 0px 10px; width: calc( 100% - 20px ); text-align: center;" disabled>
                            <p style="font-size: 14px;">Edit</p>
