--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -260,11 +260,9 @@
                 <p>Some text ala cabinet</p>
               </div>
               
-              
-              <a href="#" id="addfield" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add field</p>
-                <img src="../img/plus2.png" height="20px" width="20px" style="display: inline-block; margin-top: 3px;">
-              </a>
+              <button id="addfield" class="CTA emerald" style="padding: 5px 10px 0px 10px; width: calc( 100% - 20px ); text-align: center;">
+                <p style="font-size: 14px;">Add field</p>
+              </button>
 
               <form id="addfieldset" style="margin-top: -15px;">
                 <fieldset id="textsettingsb" style="display: none;">
