--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -278,15 +278,15 @@
               </fieldset>
 
               <div class="horizonted" style="padding: 0; display: none;" id="optsbdiv">
-                <fieldset class="manylegends setter" id="listsettingsb">
+                <fieldset class="manylegends setter" id="listsettingsb" style="height: 80px; margin-top: 10px; margin-left: 0px; width: 300px;">
                    <legend>
                      Options list
                    </legend>
                    
                  </fieldset>
-                 <fieldset class="manylegends">
+                 <fieldset class="manylegends"style="height: 80px; margin-top: 30px; margin-left: 0px; width: 300px;">
                    <legend>
-                       <button class="CTA white-matte" style="padding: 5px 10px 10px 10px; width: 100px; text-align: center; margin-top: 7px;">
+                       <button class="CTA white-matte" style="padding: 5px 10px 10px 10px; width: 100px; text-align: center; margin-top: 7px;" id="addoptb">
                            <p style="margin-left: 0px; margin-bottom: 0px; font-size: 10px;">
                            Add option
                            </p>
@@ -295,34 +295,37 @@
                    
                  </fieldset>
        
-                 <fieldset class="dopgrid" style="width: calc( 100% - 60px );">
+                 <fieldset class="dopgrid" style="width: 100%; max-height: 180px; overflow-y: scroll; margin-top: -10px; margin-left: 0px;">
                    <label for="optionsetb">Option value:</label>
-                   <input type="text" value="" id="optionsetb" style="width: 100%;">
+                   <input type="text" value="" id="optionsetb" style="width: 280px;">
                  </fieldset>
        
                </div>
-                 <script>
+                <!--  <script>
                    var manylegends = document.querySelectorAll(".manylegends");
                    var setmanylegends = document.querySelectorAll(".dopgrid");
                    
                    setmanylegends.forEach((setter,index) => {
+                     console.log(setter);
                      var width = "calc( 100% - 10px )";
-                     var height = setter.offsetHeight;
+                     var height = setter.offsetHeight != 0 ? setter.offsetHeight : 150;
                      var top = setter.offsetTop;
                      var left = setter.offsetLeft;
+                     console.log(height+", "+top+", "+left);
                      for (var i=0; i<2 && manylegends.length >= i+index+1; i++){
                        var now = index*2+i; 
-                       var style="width:"+width+"; height:"+(height)+"px;";
+                       var style="width: "+width+"; height: "+(height)+"px; ";
                       if (Math.trunc(now/2)===now/2){
-                        style+= "margin-top:"+(top-180)+"px; margin-left:"+left+"px;";
+                        style+= "margin-top:"+(top-40)+"px; margin-left:"+left+"px;";
                       } else {
-                        style+= "margin-top:"+(top-160)+"px; margin-left:"+left+"px;";
+                        style+= "margin-top:"+(top-20)+"px; margin-left:"+left+"px;";
                       }
                     console.log(style);   
                     manylegends[now].setAttribute("style", style);
+                    console.log(manylegends[now]);
                    }
-                   });
-                 </script>
+                   }); 
+                 </script>-->
                 
                 <div style="width: calc( 100% - 30px ); padding: 5px; margin-top: -20px; height: 30px; display: none; grid-template-columns: 50% 50%; grid-column-gap: 10px; grid-auto-rows: 30px;" id="buttonsinpb">
                    <div>
