--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -278,13 +278,13 @@
               </fieldset>
 
               <div class="horizonted" style="padding: 0; display: none;" id="optsbdiv">
-                <fieldset class="manylegends setter" id="listsettingsb" style="height: 80px; margin-top: 10px; margin-left: 0px; width: 300px;">
+                <fieldset class="manylegends setter" id="listsettingsb" style="height: 90px; margin-top: 10px; margin-left: 0px; width: 300px;">
                    <legend>
                      Options list
                    </legend>
                    
                  </fieldset>
-                 <fieldset class="manylegends"style="height: 80px; margin-top: 30px; margin-left: 0px; width: 300px;">
+                 <fieldset class="manylegends"style="height: 90px; margin-top: 30px; margin-left: 0px; width: 300px;" id="listaddtingsb">
                    <legend>
                        <button class="CTA white-matte" style="padding: 5px 10px 10px 10px; width: 100px; text-align: center; margin-top: 7px;" id="addoptb">
                            <p style="margin-left: 0px; margin-bottom: 0px; font-size: 10px;">
