--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -295,7 +295,7 @@
                    
                  </fieldset>
        
-                 <fieldset class="dopgrid" style="width: 100%; max-height: 180px; overflow-y: scroll; margin-top: -10px; margin-left: 0px;">
+                 <fieldset class="dopgrid" id="addoptsfieldb" style="width: 100%; max-height: 180px; overflow-y: scroll; margin-top: -10px; margin-left: 0px;">
                    <label for="optionsetb" style="display: inline-block;">Option value:</label>
                    <input type="text" value="" id="optionsetb" style="width: 140px; display: inline-block; margin-left: 10px;">
                  </fieldset>
