--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -277,14 +277,14 @@
                   </select>
               </fieldset>
 
-              <div class="horizonted" style="padding: 0; display: none;" id="optsbdiv">
-                <fieldset class="manylegends setter" id="listsettingsb" style="height: 40px; margin-top: 10px; margin-left: 0px; width: 300px;">
+              <div class="horizonted" style="padding: 0; display: none; max-height: 180px; overflow-y: scroll;" id="optsbdiv">
+                <fieldset class="manylegends setter" id="listsettingsb" style="height: 50px; margin-top: 10px; margin-left: 0px; width: 300px;">
                    <legend>
                      Options list
                    </legend>
                    
                  </fieldset>
-                 <fieldset class="manylegends"style="height: 40px; margin-top: 30px; margin-left: 0px; width: 300px;" id="listaddtingsb">
+                 <fieldset class="manylegends"style="height: 50px; margin-top: 30px; margin-left: 0px; width: 300px;" id="listaddtingsb">
                    <legend>
                        <button class="CTA white-matte" style="padding: 5px 10px 10px 10px; width: 100px; text-align: center; margin-top: 7px;" id="addoptb">
                            <p style="margin-left: 0px; margin-bottom: 0px; font-size: 10px;">
@@ -295,9 +295,9 @@
                    
                  </fieldset>
        
-                 <fieldset class="dopgrid" id="addoptsfieldb" style="width: 100%; max-height: 180px; overflow-y: scroll; margin-top: -10px; margin-left: 0px; z-index: 3;">
-                   <label for="optionsetb" style="display: inline-block;">Option value:</label>
-                   <input type="text" value="" id="optionsetb" style="width: 200px; display: inline-block; margin-left: 10px;">
+                 <fieldset class="dopgrid" id="addoptsfieldb" style="width: 100%; margin-top: -5px; margin-left: 0px; z-index: 3;">
+                   <label for="optionb" style="display: inline-block;">Option value:</label>
+                   <input type="text" value="" id="optionb" style="width: 200px; display: inline-block; margin-left: 10px;">
                  </fieldset>
        
                </div>
