--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -284,8 +284,8 @@
                    </legend>
                    
                  </fieldset>
-                 <fieldset class="manylegends"style="height: 60px; margin-top: 30px; margin-left: 0px; width: 300px;" id="listaddtingsb">
-                   <legend>
+                 <fieldset class="manylegends" style="height: 60px; margin-top: -60px; margin-left: 0px; width: 300px;" id="listaddtingsb">
+                   <legend style="box-sizing: border-box;">
                        <button class="CTA white-matte" style="padding: 5px 10px 10px 10px; width: 100px; text-align: center; margin-top: 7px;" id="addoptb">
                            <p style="margin-left: 0px; margin-bottom: 0px; font-size: 10px;">
                            Add option
@@ -295,9 +295,9 @@
                    
                  </fieldset>
        
-                 <fieldset class="dopgrid" id="addoptsfieldb" style="width: 100%; margin-top: -5px; margin-left: 0px; z-index: 3;">
+                 <fieldset class="dopgrid" id="addoptsfieldb" style="width: 100%; margin-top: -130px; margin-left: 0px; z-index: 3;">
                    <label for="optionb" style="display: inline-block;">Option value:</label>
-                   <input type="text" value="" id="optionb" style="width: 200px; display: inline-block; margin-left: 10px;">
+                   <input type="text" value="" id="optionb" style="width: 200px; display: inline-block; margin-left: 10px; z-index: 3;">
                  </fieldset>
        
                </div>
